feat(exercise):update and delete
