# backend/routes/api/exerciseRoute.js
@@ -5,23 +5,24 @@ const exerciseController = require("../../controllers/exerciseController");
 const uploadFiles = require("../../utils/uploadFiles");
 
 router.get("/", (req, res) => {
-    res.send("exercise");
-    }
-);
+  res.send("exercise");
+});
 router.get("/:examId", exerciseController.getExerciseList);
 router.get("/details/:exerciseId", exerciseController.getExerciseById);
 router.post(
-    "/upload",
-    uploadFiles.upLoadFlies().array("exercise_files", Infinity),
-    authorization,
-    exerciseController.uploadExercise
+  "/upload/:examId",
+  uploadFiles
+    .upLoadFlies(`gpass/exercises`)
+    .array("exercise_files", Infinity),
+  authorization,
+  exerciseController.uploadExercise
 );
-// router.put(
-//     "/details/:exerciseId",
-//     uploadFiles.upLoadFlies().array("exercise_files", Infinity),
-//     exerciseController.updateExercise
-// );
-// router.delete("/details/:exerciseId", exerciseController.deleteExercise);
-// router.delete("/:exerciseId", exerciseController.deleteExercise);
+router.put(
+    "/details/:exerciseId",
+    uploadFiles.upLoadFlies(`gpass/exercises`).array("exercise_files", Infinity),
+    authorization,
+    exerciseController.updateExercise
+);
+router.delete("/details/:exerciseId", authorization, exerciseController.deleteExercise);
 
 module.exports = router;
